2001-09-09  Hans Breuer  <hans@breuer.org>

	* **/makefile.mingw : Approach to compile Dia with mingw.
	Compiling mostly works but running does not (yet) ... 

	* lib/geometry.h : 
	- use G_OS_WIN32 instead of _MSC_VER to drag in isinf, etc. definitions. 
	  Apparently mingw needs it too.
	- enable 'normalization' of a null verctor. Otherwise the beziergon
	  bounding box calculation would be broken at least with msvc. What's
	  the mathematical correct result of 0.0/0.0 ?

	* lib/dia_xml.c : isinf() for mingw too.

	* lib/dia_dirs.c : use MAX_PATH instead of _MAX_PATH (works for mingw 
	and msvc)

	* lib/charconv.c : still crashes if strcmp(NULL, "UTF-8"). 
	Please don't do it.

	* lib/font.c : Trying to reflect that GTK_TALKS_UTF8_WE_DONT

	* lib/libdia.def : updated externals. Apparently mingw needs
	them to produce the right mangling.

	* plug-ins/shape/shape-exports.c : get prototypes for xmlStrdup
	and xmlDiaSaveFile

2001-09-08  Wang Jian  <lark@linux.net.cn>

	* configure.in(ALL_LINGUAS): Renamed zh_CN.GB2312 to zh_CN

2001-09-07  Cyrille Chepelov  <chepelov@calixo.net>

	* lib/dia_xml_libxml.h:
	* lib/dia_xml.c: (data_add_string), (xmlDiaSaveFile): Duplicated
	libxml1's code, to rework the output file before it gets committed
	to disk. This is rubbish, and will be removed when libxml2
	switches from discouraged to mandatory. 
	All in all, this fixes #60152. 
	
	* lib/charconv.h: 
	* lib/charconv.c: (charconv_unichar_to_utf8):
	made the type of the input parameter explicitly an unsigned long.

	* configure.in: Added a check for libz (we must now include it
	explicitly, for xmlDiaSaveFile).
	
	* app/load_save.c: (diagram_data_save):
	* lib/plug-ins.c: (ensure_pluginrc), (info_fill_from_pluginrc),
	(dia_pluginrc_write):
	* plug-ins/shape/shape-export.c: (new_shape_renderer),
	(end_render), (draw_string):
	* plug-ins/svg/render_svg.c: (new_svg_renderer), (end_render),
	(draw_string):

	Made sure we always write UTF-8 XML files, and through
	xmlDiaSaveFile().
